--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <title>Hello</title>
+        <style>
+            h1 {
+            color: red;
+            }
+        </style>
     </head>
     <body>
         <h1> welcome to my website</h1>
